--- a/index.html
+++ b/index.html
@@ -253,18 +253,13 @@
         <div class="scene-content">
 
             <h2>
-                Спасибо что ты есть
+                Спасибо &lt;3
             </h2>
 
             <div class="images">
                 <img src="img/12.gif" alt="">
             </div>
 
-            <br>
-            <br>
-            <h2>
-                ...и за попытку)
-            </h2>
         </div>
     </div>
 
